# bazel-cross-example

./: BUILD.bazel  MODULE.bazel  README.md
